--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,51 @@
 body{ 
- 	background-color: #2b2b2b; 
+	background-color: #b1bfd8;
+	background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
 	margin: 0;
 	height: 100vh;
 	font-family: 'Mochiy Pop One', sans-serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .main-container{
-	height: 100%;
+	position: relative;
+	height: 80%;
+	width: 800px;
+	max-width: 90%;
 	display: grid;
 	grid-template-rows: 30% 70%;
 	grid-template-columns: 100%;
+	box-shadow: 5px 5px 15px black;
 }
 
 .header-container{
 	height: 99%;
 	width: 100%;
 	background-image: url("/img/hd-wallpaper-g5be80ea25_1920.jpg");
+	background-position: center;
 	border-bottom: 2px solid #000000;
+	display: grid;
+	grid-template-columns: 65% 35%;
+	justify-items: center;
+	align-items: center;
+	color: white;
+}
+.main-header{
+	justify-self: left;
+	margin-left: 50px;
+	font-size: 30px;
+}
+.todo-count{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.37);
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-size: 20px;
 }
 
 .todo-main-container{
@@ -43,8 +72,8 @@ body{
 	height: 100%;
 	width: 80%;
 	display: flex;
-	gap: 20px;
 	align-items: center;
+	justify-content: space-between;
 	border-bottom: 1px solid black;
 }
 .todo-icon{
@@ -65,4 +94,108 @@ body{
 	background-color: #2950ce;
 	border-radius: 50%;
 	cursor: pointer;
+}
+.todo-done-btn{
+	cursor: pointer;
+	border: 1px solid black;
+	border-radius: 10%;
+	padding: 5px;
+	background-color: rgb(109, 221, 109);
+	color: black;
+}
+
+
+.add-todo-container{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #28297e;
+	display: none;
+	grid-template-rows: 30% 70%;
+}
+.add-todo-header{
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
+}
+.move-back-arrow{
+	color: #b1bfd8;
+	font-size: 30px;
+	cursor: pointer;
+} 
+.header-text{
+	color: #ffffff;
+	font-size: 20px;
+}
+.inputs-container{
+	display: grid;
+	justify-items: center;
+	grid-auto-rows: 50px 100px;
+}
+.choose-icon, .icons-container{
+	justify-self: left;
+	padding-left: 10%;
+}
+.choose-icon{
+	color: #ffffff;
+	text-decoration: underline;
+}
+.icons-container{
+	display: flex;
+	cursor: pointer;
+}
+.icons:nth-child(1){
+	margin: 0;
+}
+.icons{
+	font-size: 30px;
+	margin-left: 20px;
+	border: 1px solid #808080;
+	background-color: transparent;
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #58a7e7;
+	cursor: pointer;
+}
+.icons:focus{
+	background-color: #001b3f;
+}
+.inputs{
+	width: 80%;
+	border: none;
+	border-bottom: 1px solid #808080;
+	background-color: transparent;
+	height: 30px;
+}
+.inputs:focus{
+	outline: none;
+	border-bottom: 1px solid #58a7e7;
+}
+
+
+@media (max-width: 500px) {
+	.icons{
+		font-size: 20px;
+		margin-left: 10px;
+		border: 1px solid #808080;
+		background-color: transparent;
+		height: 40px;
+		width: 40px;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color: #58a7e7;
+		cursor: pointer;
+	}
+}
+@media (max-width: 800px) {
+	.main-container{
+		max-width: 100%;
+		height: 100%;
+	}
 }
