--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
 	display: grid;
 	grid-template-rows: 30% 70%;
 	grid-template-columns: 100%;
-	box-shadow: 5px 5px 15px black;
+	box-shadow: 5px 5px 15px #131313;
 }
 
 .header-container{
@@ -68,19 +68,28 @@ body{
 	overflow: auto;
 }
 .list-items-container{
+	position: relative;
 	margin-top: 50px;
 	height: 100%;
 	width: 80%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #131313;
+	color: #131313;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 .todo-icon{
-	padding: 20px;
+	height: 60px;
+	width: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
 	border-radius: 50%;
 	border: 1px solid gray;
-	color: blue;
+	color: #19629e;
 }
 
 .add-todo-btn{
@@ -97,21 +106,24 @@ body{
 }
 .todo-done-btn{
 	cursor: pointer;
-	border: 1px solid black;
+	border: 1px solid #131313;
 	border-radius: 10%;
 	padding: 5px;
 	background-color: rgb(109, 221, 109);
-	color: black;
+	color: #131313;
 }
-
 
 .add-todo-container{
 	position: absolute;
-	width: 100%;
+	right: 0;
+	width: 0;
+	opacity: 0;
 	height: 100%;
 	background-color: #28297e;
-	display: none;
+	display: grid;
+	overflow-x: hidden;
 	grid-template-rows: 30% 70%;
+	transition: 500ms;
 }
 .add-todo-header{
 	display: flex;
@@ -175,7 +187,31 @@ body{
 	outline: none;
 	border-bottom: 1px solid #58a7e7;
 }
+.submit-todos-btn{
+	border: 2px solid rgb(231, 231, 231);
+	border-radius: 5px;
+	background-color: transparent;
+	font-family: 'Mochiy Pop One', sans-serif;
+	background-color: #58a7e7;
+	width: 200px;
+	height: 50px;
+	margin-top: 50px;
+	cursor: pointer;
+	box-shadow: 2px 2px 10px rgb(27, 27, 27);
+	color: white;
+	text-shadow: 2px 2px 5px black;
+	font-size: 15px;
+}
+.submit-todos-btn:hover{
+	background-color: #3c729e;
+	transition: 200ms;
+}
 
+.showSection{
+	width: 100%;
+	opacity: 1;
+	transition: 500ms;
+}
 
 @media (max-width: 500px) {
 	.icons{
